# Synthesis-experiments

./: .gitignore  README.md  all.py  all.spec  buy.py  experiment.py  program1.py  program2.py  program2.spec  program3.py  pyproject.toml  source.py  test.py
white_way/: boost_production_volume.py  config.json  make_money.py  pay.py
